# Quant_Research_FactorMarketRL

./: .gitignore  README.md  requirements.txt
portfolio_attention/: profolio_attention_README.md  pyproject.toml  src_architecture.md
portfolio_attention/ablations/: dirichlet_training.yaml  new_generator_yaml.yaml  no_prev_weight.yaml  raw.yaml  return.yaml  rl_return.yaml  rl_return_PPO.yaml  rl_return_SAC.yaml  rl_training.yaml  rl_winrate.yaml  rl_winrate_bear.yaml  sample.yaml  sharpe_loss.yaml
portfolio_attention/src/: analyze_holdout_day.py  export_ablation_best_epoch_tables.py  export_best_epoch_comparison.py  recover_monitoring_holdout_backtests.py
portfolio_attention/src/portfolio_attention/: __init__.py  artifact_paths.py  config.py  config_paths.py  config_validation.py  dataset.py  evaluate.py  evaluate_rebuild.py  evaluation_artifacts.py  evaluation_monitoring.py  evaluation_pipeline.py  evaluation_presentation.py  evaluation_runtime.py  evaluation_shared.py  losses.py  (+15 more)
portfolio_attention/tests/: test_artifact_paths.py  test_dataset.py  test_evaluate.py  test_evaluate_facade.py  test_evaluation_shared.py  test_evaluation_types.py  test_export_best_epoch_comparison.py  test_losses.py  test_model.py  test_run_metadata.py  test_smoke_train.py
toy_ff_generator/: generator_README.md  pyproject.toml  src_architecture.md
toy_ff_generator/src/: check_Parquet.py  summarize_combo_stats.py
toy_ff_generator/tests/: conftest.py  test_alpha_noise.py  test_characteristics.py  test_exposures.py  test_factors.py  test_main.py  test_returns.py  test_validation.py
(+118 files in other folders)
